# openlake

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.toml
benchmarks/: README.md
cli/openlake_scrub/: README.md
cli/src/: cli.rs  main.rs
cli/src/commands/: mod.rs
cli/src/commands/bench/: client.rs  dct.rs  mod.rs  mode.rs  report.rs  target.rs
cli/src/commands/cluster/: status.rs  topology.rs
cli/src/commands/version/: mod.rs
cli/version_mixed/: README.md
crates/openlake_io/: Cargo.toml
crates/openlake_io/src/: backend.rs  error.rs  kv.rs  kv_slab.rs  lib.rs  local_fs.rs  net_metrics.rs  purge.rs  rdma_backend.rs  remote_fs.rs  rpc.rs  shm.rs  stream.rs  types.rs  xl_meta.rs
crates/openlake_io/src/alloc/: buffer.rs  memory_pool.rs
crates/openlake_io/src/rdma/: ah_cache.rs  bootstrap.rs  buffers.rs  device.rs  mod.rs  node.rs  rdma_buf.rs  socket.rs  wire.rs  wr.rs
crates/openlake_kv_client/: .gitignore  Cargo.toml  build.sh  pyproject.toml
crates/openlake_kv_client/python/openlake_client/: __init__.py  __main__.py
crates/openlake_kv_client/src/: client.rs  lib.rs  protocol.rs  shm_local.rs  transport.rs
crates/openlake_rdma/: Cargo.toml
crates/openlake_rdma/examples/: rdma_write_bench.rs
crates/openlake_rdma/src/: completion.rs  error.rs  lib.rs  memory.rs  queue_pair.rs  work.rs
crates/openlake_rdma/src/backend/: loopback.rs  mod.rs  verbs.rs
crates/openlake_rdma/tests/: loopback.rs
crates/openlake_server/: Cargo.toml
crates/openlake_server/configs/: kv_local.toml  kv_rdma.toml  storage-tcp-flink.toml  storage-tcp-local.toml
crates/openlake_server/src/: auth.rs  config.rs  in_memory_store.rs  kv_runtime.rs  kv_slab.rs  lib.rs  lock_server.rs  main.rs  rdma_server.rs  rpc_server.rs  tls_material.rs
crates/openlake_server/src/s3/: app.rs  body_source.rs  error.rs  listener.rs  metrics.rs  mod.rs  state.rs  xml.rs
crates/openlake_server/src/s3/handlers/: buckets.rs  in_memory_store.rs  mod.rs  objects.rs
crates/openlake_server/src/s3/middleware/: sigv4.rs
crates/openlake_server/tests/: in_memory_store_perf.rs
crates/openlake_storage/: Cargo.toml
crates/openlake_storage/src/: cluster.rs  dsync.rs  ec.rs  engine.rs  error.rs  format.rs  kv_backend.rs  kv_engine.rs  lib.rs  object.rs
crates/phenomenal_io/examples/: rdma_loopback.rs
crates/phenomenal_io/src/: rdma_backend.rs
crates/phenomenal_io/src/rdma/: ah_cache.rs  buffers.rs  mod.rs  node.rs  rdma_buf.rs  socket.rs  wr.rs
crates/phenomenal_server/src/: main.rs  rdma_server.rs
docker/: openlaked.Dockerfile
docs/: cli_reference.rst  cluster_operations.rst  index.rst
docs/examples/: spark_openlake.rst
docs/planning/: documentation_structure_proposal.md
docs/user/: flink-openlake.rst
