[package]
name                   = "openlake_io"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]
compio       = { workspace = true }

# HTTP/2 inter-node RPC plane. `RemoteBackend` is a cyper client; every
# `StorageBackend` method becomes a single h2 stream on a long-lived
# connection per peer. `futures` brings in `mpsc` for the push→pull
# bridge that turns `ByteSink::write_all` calls into a `cyper::Body`
# stream. `send_wrapper` lifts the runtime-local (`!Send`) receiver
# into `Body::stream`'s `Send + 'static` bound; sound because each
# compio runtime is pinned to one OS thread.
cyper        = { workspace = true }
http         = { workspace = true }
futures      = { workspace = true }
futures-util = { workspace = true }
send_wrapper = { workspace = true }
# URL-safe-no-pad base64 for encoding the bincode `Request` envelope
# into the `x-openlake-rpc` HTTP header on the streaming-write
# route. The URL-safe alphabet matches AWS conventions for
# upload-IDs and other header-borne tokens.
base64       = { workspace = true }

bytes        = { workspace = true }
serde        = { workspace = true }
bincode      = { workspace = true }
async-trait  = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
libc         = "0.2"
uuid         = { version = "1", features = ["v4", "serde"] }
rmp-serde    = "1"
serde_json   = { workspace = true }
xxhash-rust  = { version = "0.8", features = ["xxh64"] }
crc32c       = { workspace = true }
rustls       = { workspace = true }
socket2      = "0.6"
lru          = "0.12"

# Buffer pool deps — see workspace Cargo.toml.
aligned-vec     = { workspace = true }
crossbeam-queue = { workspace = true }
once_cell       = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
rdma-mummy-sys = { version = "0.2", optional = true }

[target.'cfg(target_os = "linux")'.build-dependencies]
bindgen = { version = "0.71", optional = true }

[features]
rdma = ["dep:rdma-mummy-sys", "dep:bindgen"]

[dev-dependencies]
tempfile           = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
