[package]
name                   = "openlake_server"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[[bin]]
name = "openlaked"
path = "src/main.rs"

[features]
rdma = ["openlake_io/rdma"]

[dependencies]
openlake_io      = { path = "../openlake_io" }
openlake_storage = { path = "../openlake_storage" }

compio             = { workspace = true }
cyper              = { workspace = true }
cyper-axum         = { workspace = true }
axum               = { workspace = true }
send_wrapper       = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }
http-body-util     = { workspace = true }
nix                = { workspace = true }
socket2            = { workspace = true }
bytes              = { workspace = true }
dashmap            = { workspace = true }
serde              = { workspace = true }
toml               = { workspace = true }
httparse           = { workspace = true }
http               = { workspace = true }
aws-sigv4                 = { workspace = true }
aws-credential-types      = { workspace = true }
aws-smithy-runtime-api    = { workspace = true }
quick-xml          = { workspace = true }
sha2               = { workspace = true }
hex                = { workspace = true }
time               = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clap               = { workspace = true }
async-trait        = { workspace = true }
futures-util       = { workspace = true }
# `futures::stream::unfold` builds the streaming response body for
# `POST /v1/rpc/stream-read` (mirroring the s3 GET handler). The
# `futures` umbrella crate already lives at the workspace level for
# the same purpose in `openlake_io`.
futures            = { workspace = true }
uuid               = { version = "1", features = ["v4"] }
base64             = { workspace = true }
md-5               = "0.10"

# TLS plane. compio's `rustls` feature pulls compio-tls 0.4
# transitively (accessed via `compio::tls`). rustls is the engine,
# pinned to aws-lc-rs as the crypto provider via our workspace dep.
# rustls-pemfile is the cert/key loader.
rustls             = { workspace = true }
rustls-pemfile     = { workspace = true }
percent-encoding = "2.3.2"

[dev-dependencies]
rcgen              = { workspace = true }
tempfile           = { workspace = true }

# Linux-only: hwloc for physical-core enumeration. On macOS / other
# dev platforms we fall back to `available_parallelism` which can't
# filter hyperthread siblings — acceptable because production is
# Linux bare-metal where this dep is present.
[target.'cfg(target_os = "linux")'.dependencies]
hwlocality = { workspace = true }
